{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 5,
  "lineage": "dfb591ca-27e9-8d8a-d043-4538219f819d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-18T11:21:49.074-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/long-state-452316-d2/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/global/networks/default",
            "priority": 1000,
            "project": "long-state-452316-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-access"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-18T11:21:49.131-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/long-state-452316-d2/global/firewalls/allow-jenkins",
            "log_config": [],
            "name": "allow-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/global/networks/default",
            "priority": 1000,
            "project": "long-state-452316-d2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/global/firewalls/allow-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230727",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/zones/asia-southeast1-a/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-18T11:21:54.511-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/long-state-452316-d2/zones/asia-southeast1-a/instances/terraform-instance",
            "instance_id": "7866655672849898448",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDSAWFt8ifz8PFO+mIgBU7bcRM8qa060fUWuaIFkfiWNZ2UwnlrrQ5S87X3u23iLAtdKLjstbT/rxxHzCUVsGQsplNBYxzKQIzpNiJFzksG9psZSyqmQG0dXKKL3P8XcqiEe2AVJoCshH3nOmvjsMrTftsz9I5ABszXyrpLWAtLoFs+kq7QlvnNMtG2xp4GjcVBAo4jCE6uL9NLDrnbnX539s7dcfpBBOQ8sr8AHZlRDj9k7AvrLIJ/XdoCSh3ormbsjb9Sj8R4jq7PWMoNFR9h4CqhhA0EksNh3Hw5qteaasyMfyImJ/3+RC0A6YRHyOVuqDsPFIjOsW1hmTJtyBbSy3aeIV/ToqrnFPXLLnWB7mih7meHelht93e37Wlylj0ec7zSWg0sF4I2NJMrWnR7XB1A5R1FxmiAuxMW78C72S [...]
            },
            "metadata_fingerprint": "KyPF0Bh6Pl4=",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.143.188.167",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/global/networks/default",
                "network_ip": "10.148.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "long-state-452316-d2"
              }
            ],
            "project": "long-state-452316-d2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/long-state-452316-d2/zones/asia-southeast1-a/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-access"
            ],
            "tags_fingerprint": "UN_d4GsYhqM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}